CHANGELOG

====================================================
0.5.0-beta

BackEnd:
- Changed the failable system
- Added validation for null id in API
- Changed worker system to a task manager system
- Added metadata grabber task with auto refresh

====================================================
0.4.1-beta

BackEnd:
- Optimised song collector reduce database calls

====================================================
0.4.0-beta

FrontEnd:
- Optimised research
- Patched a bug in song duration parsing
- Cover are now lazily fetched to reduce number of call to the back
- Refactored front code base

BackEnd:
- Implemented a exception system

====================================================
0.3.2-beta

BackEnd:
- Patched a bug in songCollector that keeped recreating albums and artists rather than using already existing ones

====================================================
0.3.1-beta

FrontEnd:
- Changed overflow behavior of album list in artist presentations

BackEnd:
- Refactored the code base

====================================================
0.3.0-beta

FrontEnd:
- Resized album and artist items to avoid horizontal clipping of names
- Change display settings of too large and too little cover to avoid overflowing
- Hid useless scrollbars
- Changed artist image placeholder to a mosaic of album
- Fixed the logo overflowing
- Changed like button behavior
- Likes now update when clicked on
- Added a text input to do search on items

====================================================
0.2.0-beta

API:
- Changed API reponses. Added status code et error messages

====================================================
0.1.0-beta

Server:
- Changed environnement variables names
- Added headless mode
- Added a migration logic for the database
- Automatic Musicbrainz fetching
- Changed fpcalc package to fpcalc-async
- Automatic cover fetching
- New environnement variable QUAVER_IMAGES_PATH to store cover
- Default value for QUAVER_MUSIC_PATH changed to /music
